<?xml version="1.0"?>
<package format="3">
  <name>roscuda_vectoradd</name>
  <version>0.0.0</version>
  <description>Example ROS 2 package with CUDA</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
